# event-driven-system

./: README.md  cluster-command.sh  run-jobs-local.sh  start-minikube.sh
devops/bitnami-values/: values-etcd.yaml  values-kafka.yaml  values-pgsql.yaml
devops/command-unit/: Chart.yaml  values.yaml
devops/command-unit/templates/: machine-deployment.yaml
devops/dockerfiles/command-unit/: Dockerfile
devops/io-batch-reader/: Chart.yaml  values.yaml
devops/io-batch-reader/templates/: deployment-io-batch-reader.yaml
devops/jobs/: values.yaml
devops/jobs/templates/: jobs.yaml
devops/key-manager/: Chart.yaml  values.yaml
devops/key-manager/templates/: deployment-key-manager.yaml
devops/signing-workers/: Chart.yaml  values.yaml
devops/signing-workers/templates/: deployment-signing-worker.yaml
devops/verify-tx-worker/: Chart.yaml  values.yaml
devops/verify-tx-worker/templates/: deployment.yaml
src/etcd-test/: go.mod  go.sum  main.go  run.sh
src/io-batch-reader/: Dockerfile  cd.sh  ci.sh  go.mod  go.sum  main.go  run-pipe.sh
src/jobs/: Dockerfile  ci.sh  go.mod  go.sum  main.go  propmt
src/key-manager/: Dockerfile  cd.sh  ci.sh  go.mod  go.sum  main.go
src/key-manager-rs/: Cargo.toml
src/key-manager-rs/src/: lib.rs
src/signing-worker/: Dockerfile  cd.sh  ci.sh  go.mod  go.sum  main.go  run-pipe.sh
src/verify-tx-worker/: Dockerfile  cd.sh  ci.sh  go.mod  go.sum  main.go
