[package]
name = "keymanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clear = "0.1.0"
deadqueue = "0.2.4"
etcd-client = "0.10.4"
hyper = "0.14.25"
routerify = "3.0.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = "1.27.0"
